# mandrill

./: .gitignore  LICENSE  Makefile  README.md  go.mod  install.bat  install.sh
cmd/mandrill/: main.go
crates/mandrill-core/: Cargo.toml
crates/mandrill-core/src/: dependency.rs  install.rs  lib.rs  manifest.rs
crates/mandrill-registry/: Cargo.toml
crates/mandrill-registry/src/: index.rs
internal/cli/: commands.go  git.go  root.go  setup.go
internal/config/: config.go
internal/github/: gh.go
internal/tui/: tui.go
internal/tui/styles/: themes.go
mandrill-registry/: index.toml
