[package]
name = "mandrill-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
semver = "1"
reqwest = { version = "0.12", features = ["blocking"] }
flate2 = "1"
tar = "0.4"
zip = "2"
git2 = "0.19"
anyhow = "1"
dirs = "5"
